# p2p-mobile-chat

./: .gitignore  README.md
.agent/workflows/: build.md
SecureChatApp/SecureChatApp/: BridgingHeader.h  ChatView.swift  ChatViewModel.swift  ConfettiView.swift  ContentView.swift  Info.plist  InvitationView.swift  ScannerView.swift  SecureChatApp.swift  SettingsView.swift  securechat_core.swift  securechat_coreFFI.h  securechat_coreFFI.modulemap
SecureChatApp/SecureChatApp.xcodeproj/: project.pbxproj
SecureChatApp/SecureChatApp.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
SecureChatApp/SecureChatApp/Assets.xcassets/AccentColor.colorset/: Contents.json
core/: Cargo.toml  build.rs
core/src/: lib.rs  logger.rs  securechat_core.udl
core/src/api/: messaging.rs  mod.rs  privacy.rs
core/src/crypto/: keys.rs  mod.rs  ratchet.rs  session.rs  tests.rs  x3dh.rs
core/src/messaging/: contact.rs  handler.rs  manager.rs  mod.rs  protocol.rs  tests.rs
core/src/network/: api.rs  behaviour.rs  chat.rs  config.rs  mod.rs  node.rs  persistence.rs  relay_node.rs  tests.rs
core/src/privacy/: circuit.rs  manager.rs  mod.rs  obfuscation.rs  relay.rs  sphinx_wrapper.rs
core/src/util/: mod.rs  serde_hex.rs
core/tests/: relay_integration_test.rs
docs/: implementation_plan.md  task.md  ui_design.md
