[package]
name = "securechat_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "securechat_core"

[dependencies]
# Cryptography - Signal Protocol
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
x25519-dalek = { version = "2.0", features = ["static_secrets", "serde"] }
curve25519-dalek = "4.1"
aes-gcm = "0.10"
hkdf = "0.12"
hmac = "0.12"
rand = "0.8"
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
zeroize = { version = "1.7", features = ["derive"] }

# UniFFI for Swift/Kotlin bindings
uniffi = { version = "0.25", features = ["cli"] }

# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync", "time", "io-std", "io-util"] }

# P2P Networking
libp2p = { version = "0.53", features = [
    "tokio",
    "noise",
    "yamux",
    "tcp",
    "quic",
    "dns",
    "kad",
    "mdns",
    "identify",
    "ping",
    "relay",
    "dcutr",
    "request-response",
    "macros",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"
void = "1.0"

[build-dependencies]
uniffi = { version = "0.25", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[[bin]]
name = "p2p-test"
path = "src/bin/p2p-test.rs"
